@@ -87,17 +87,18 @@ final class JJTreeState
 
   private static void insertState (final PrintWriter ostr)
   {
+    final boolean bGenerateGenerics = Options.getGenerateGenerics ();
     ostr.println ("public class " + nameState () + " {");
 
-    if (!Options.getGenerateGenerics ())
-      ostr.println ("  private java.util.List nodes;");
-    else
+    if (bGenerateGenerics)
       ostr.println ("  private java.util.List<Node> nodes;");
-
-    if (!Options.getGenerateGenerics ())
-      ostr.println ("  private java.util.List marks;");
     else
+      ostr.println ("  private java.util.List nodes;");
+
+    if (bGenerateGenerics)
       ostr.println ("  private java.util.List<Integer> marks;");
+    else
+      ostr.println ("  private java.util.List marks;");
 
     ostr.println ("");
     ostr.println ("  private int sp;        // number of nodes on stack");
@@ -106,15 +107,15 @@ final class JJTreeState
     ostr.println ("");
     ostr.println ("  public " + nameState () + "() {");
 
-    if (!Options.getGenerateGenerics ())
-      ostr.println ("    nodes = new java.util.ArrayList();");
-    else
+    if (bGenerateGenerics)
       ostr.println ("    nodes = new java.util.ArrayList<Node>();");
-
-    if (!Options.getGenerateGenerics ())
-      ostr.println ("    marks = new java.util.ArrayList();");
     else
+      ostr.println ("    nodes = new java.util.ArrayList();");
+
+    if (bGenerateGenerics)
       ostr.println ("    marks = new java.util.ArrayList<Integer>();");
+    else
+      ostr.println ("    marks = new java.util.ArrayList();");
 
     ostr.println ("    sp = 0;");
     ostr.println ("    mk = 0;");
@@ -139,10 +140,10 @@ final class JJTreeState
     ostr.println ("  /* Returns the root node of the AST.  It only makes sense to call");
     ostr.println ("     this after a successful parse. */");
     ostr.println ("  public Node rootNode() {");
-    if (!Options.getGenerateGenerics ())
-      ostr.println ("    return (Node)nodes.get(0);");
-    else
+    if (bGenerateGenerics)
       ostr.println ("    return nodes.get(0);");
+    else
+      ostr.println ("    return (Node)nodes.get(0);");
     ostr.println ("  }");
     ostr.println ("");
     ostr.println ("  /* Pushes a node on to the stack. */");
@@ -150,28 +151,28 @@ final class JJTreeState
     ostr.println ("    nodes.add(n);");
     ostr.println ("    ++sp;");
     ostr.println ("  }");
-    ostr.println ("");
+    ostr.println ();
     ostr.println ("  /* Returns the node on the top of the stack, and remove it from the");
     ostr.println ("     stack.  */");
     ostr.println ("  public Node popNode() {");
     ostr.println ("    if (--sp < mk) {");
-    if (!Options.getGenerateGenerics ())
+    if (bGenerateGenerics)
+      ostr.println ("      mk = marks.remove(marks.size()-1).intValue();");
+    else
       ostr.println ("      mk = ((Integer)marks.remove(marks.size()-1)).intValue();");
-    else
-      ostr.println ("      mk = marks.remove(marks.size()-1);");
     ostr.println ("    }");
-    if (!Options.getGenerateGenerics ())
-      ostr.println ("    return (Node)nodes.remove(nodes.size()-1);");
-    else
+    if (bGenerateGenerics)
       ostr.println ("    return nodes.remove(nodes.size()-1);");
+    else
+      ostr.println ("    return (Node)nodes.remove(nodes.size()-1);");
     ostr.println ("  }");
-    ostr.println ("");
+    ostr.println ();
     ostr.println ("  /* Returns the node currently on the top of the stack. */");
     ostr.println ("  public Node peekNode() {");
-    if (!Options.getGenerateGenerics ())
-      ostr.println ("    return (Node)nodes.get(nodes.size()-1);");
-    else
+    if (bGenerateGenerics)
       ostr.println ("    return nodes.get(nodes.size()-1);");
+    else
+      ostr.println ("    return (Node)nodes.get(nodes.size()-1);");
     ostr.println ("  }");
     ostr.println ("");
     ostr.println ("  /* Returns the number of children on the stack in the current node");
@@ -185,18 +186,15 @@ final class JJTreeState
     ostr.println ("    while (sp > mk) {");
     ostr.println ("      popNode();");
     ostr.println ("    }");
-    if (!Options.getGenerateGenerics ())
-      ostr.println ("    mk = ((Integer)marks.remove(marks.size()-1)).intValue();");
+    if (bGenerateGenerics)
+      ostr.println ("    mk = marks.remove(marks.size()-1).intValue();");
     else
-      ostr.println ("    mk = marks.remove(marks.size()-1);");
+      ostr.println ("    mk = ((Integer)marks.remove(marks.size()-1)).intValue();");
     ostr.println ("  }");
     ostr.println ("");
     ostr.println ("");
     ostr.println ("  public void openNodeScope(Node n) {");
-    if (!Options.getGenerateGenerics ())
-      ostr.println ("    marks.add(new Integer(mk));");
-    else
-      ostr.println ("    marks.add(mk);");
+    ostr.println ("    marks.add(Integer.valueOf(mk));");
     ostr.println ("    mk = sp;");
     ostr.println ("    n.jjtOpen();");
     ostr.println ("  }");
@@ -207,10 +205,10 @@ final class JJTreeState
     ostr.println ("     made the children of the definite node.  Then the definite node");
     ostr.println ("     is pushed on to the stack. */");
     ostr.println ("  public void closeNodeScope(Node n, int num) {");
-    if (!Options.getGenerateGenerics ())
-      ostr.println ("    mk = ((Integer)marks.remove(marks.size()-1)).intValue();");
+    if (bGenerateGenerics)
+      ostr.println ("    mk = marks.remove(marks.size()-1).intValue();");
     else
-      ostr.println ("    mk = marks.remove(marks.size()-1);");
+      ostr.println ("    mk = ((Integer)marks.remove(marks.size()-1)).intValue();");
     ostr.println ("    while (num-- > 0) {");
     ostr.println ("      Node c = popNode();");
     ostr.println ("      c.jjtSetParent(n);");
@@ -230,10 +228,10 @@ final class JJTreeState
     ostr.println ("  public void closeNodeScope(Node n, boolean condition) {");
     ostr.println ("    if (condition) {");
     ostr.println ("      int a = nodeArity();");
-    if (!Options.getGenerateGenerics ())
-      ostr.println ("      mk = ((Integer)marks.remove(marks.size()-1)).intValue();");
+    if (bGenerateGenerics)
+      ostr.println ("      mk = marks.remove(marks.size()-1).intValue();");
     else
-      ostr.println ("      mk = marks.remove(marks.size()-1);");
+      ostr.println ("      mk = ((Integer)marks.remove(marks.size()-1)).intValue();");
     ostr.println ("      while (a-- > 0) {");
     ostr.println ("        Node c = popNode();");
     ostr.println ("        c.jjtSetParent(n);");
@@ -243,10 +241,10 @@ final class JJTreeState
     ostr.println ("      pushNode(n);");
     ostr.println ("      node_created = true;");
     ostr.println ("    } else {");
-    if (!Options.getGenerateGenerics ())
-      ostr.println ("      mk = ((Integer)marks.remove(marks.size()-1)).intValue();");
-    else
+    if (bGenerateGenerics)
       ostr.println ("      mk = marks.remove(marks.size()-1);");
+    else
+      ostr.println ("      mk = ((Integer)marks.remove(marks.size()-1)).intValue();");
     ostr.println ("      node_created = false;");
     ostr.println ("    }");
     ostr.println ("  }");
